--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"babel-preset-react-native": "2.1.0",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.1"
+		"react-native": "0.47.1",
+		"react-navigation": "1.0.0-beta.11"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
