--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"babel-preset-react-native": "2.1.0",
+		"axios": "0.16.2",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
-		"react-navigation": "1.0.0-beta.11"
+		"react-native-elements": "0.16.0",
+		"react-native-vector-icons": "4.3.0",
+		"react-navigation": "1.0.0-beta.11",
+		"react-redux": "5.0.6",
+		"redux": "3.7.2",
+		"redux-thunk": "2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
+		"babel-plugin-add-module-exports": "0.2.1",
+		"babel-preset-react-native": "2.1.0",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
