--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "jest",
+		"lint": "eslint src"
 	},
 	"dependencies": {
 		"axios": "0.16.2",
+		"prop-types": "15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-elements": "0.16.0",
@@ -18,8 +20,14 @@
 		"redux-thunk": "2.2.0"
 	},
 	"devDependencies": {
+		"babel-eslint": "7.2.3",
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.1.0",
+		"eslint": "4.3.0",
+		"eslint-config-airbnb": "15.1.0",
+		"eslint-plugin-import": "2.7.0",
+		"eslint-plugin-jsx-a11y": "5.1.1",
+		"eslint-plugin-react": "7.1.0",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
