--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"axios": "0.16.2",
+		"lodash": "4.17.4",
 		"prop-types": "15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
